# hexchat

plugins/python/: exports.h  generate_plugin.py  imports.h  init.c  init.py  meson.build
